--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <p>Level: <span id="level">1</span></p>
     </div>
     <div class="grid"></div>
-    <div>Time left: <span id="timer">60</span> seconds</div>
+    <div ><b>Time left: <span id="timer">60</span> seconds</b></div>
 </body>
 </html>
