--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <h1>AGT Crush</h1>
-    <div class="game-info">
+    <div class="scorreBoard">
+        <h2 id="score">
         <p>Score: <span id="score">0</span></p>
         <p>Level: <span id="level">1</span></p>
+    </h2>
     </div>
     <div class="grid"></div>
-    <div ><b>Time left: <span id="timer">60</span> seconds</b></div>
+    <div ><h2 id="timeleft"><b>Time left: <span id="timer">60</span> seconds</b></h2></div>
 </body>
 </html>
