--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="header">
         <h1>AGT Crush</h1>
         <div>
-            <h2 id="timeleft"><b>Time left: <span id="timer">60</span> seconds</b></h2>
+            <h2 id="timeleft"><b>Time left: <span id="timer">180</span> seconds</b></h2>
         </div>
     </div>
 
     <div class="scoreBoard">
-        <h2 id="score">
+        <h2 id="score-container">
             <p>Score: <span id="score">0</span></p>
             <p>Level: <span id="level">1</span></p>
         </h2>
